--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,12 +1,14 @@
 @charset "UTF-8";
 
+
+
 *{
     margin:0px;
     padding:0px;
     font-family: Arial, Helvetica, sans-serif;
 }
  body{
-    background-color: rgb(143, 92, 175)
+    background-color: rgba(49, 32, 59, 0.583)
  }
 
 main{
@@ -14,11 +16,11 @@ main{
 }
 section{
 
-    border-radius: 10%;
-    height: 500px;
-    width: 250px;
-    background-color: white;
-    box-shadow: 2px 2px 5px black;
+    border-radius: 15px;
+    height: 550px;
+    width: 270px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
     text-align: center;
     position: absolute;
     top: 50%;
@@ -29,18 +31,78 @@ section{
     
 }
 img{
-    inline-size: 250px;
+    inline-size: 270px;
     border-radius: 10px  10px  0px  0px;
   
 }
-div#be{
-   background-color: aquamarine;
-   padding: 10px;
+.tp{
+    display: block;
+    margin: auto;
+    border-radius: 7px 12px 12px 7px  ;
+    background-color: rgb(153, 63, 237);
+    background-size: contain;
+   padding-top: 3px;
+   padding-bottom: 3px;
+   width: 247px;
 
+
+}
+div#email{
+  margin-bottom: 4px;
+  
 }
 div#email > h1{
     margin: 10px;
+    font-weight: 900;
+
 }
 div#email > p{
     padding: 10px;
+   
+
+}
+#bs{
+    margin-bottom: 5px;
+}
+.paineo{
+    height: 36px;
+    border:1px solid  rgba(137, 43, 226, 0.77);
+    border-radius: 7px 12px 12px 7px;
+    width: 194px;
+   
+
+}
+.paineo:hover{
+    background-color: rgba(127, 255, 212, 0.847);
+  
+  
+}
+#person{
+  display: inline-block;
+  position: relative;
+  top: 50%;
+  left: -50%;
+  transform: translate(125px, 40%);
+  font-size: 40px;
+  margin-top: -19px;
+  color: white;
+}
+#chave{
+    display: inline-block;
+    position: relative;
+    top: 50%;
+    left: -50%;
+    transform: translate(125px, 40%);
+    font-size: 40px;
+    margin-top: -19px;
+    color: rgb(243, 240, 240);
+}
+#ev{
+    background-color: rgba(46, 237, 161, 0.439);
+    width: 250px;
+    height: 30px;
+    border-radius: 10px;
+}
+#ev:hover{
+    background-color: rgba(28, 189, 127, 0.931);
 }
