--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,17 +30,19 @@ section{
     
     
 }
-img{
-    inline-size: 270px;
-    border-radius: 10px  10px  0px  0px;
-  
+#foto{
+    background: url(../imagens/pattern-gc49cc95ba_1280.jpg) no-repeat   center center ;
+    background-size: 100vw;
+   width: 270px;
+   height: 200px;
+   inline-size: 270px;
+   border-radius: 10px  10px  0px  0px;
 }
 .tp{
     display: block;
     margin: auto;
     border-radius: 7px 12px 12px 7px  ;
     background-color: rgb(153, 63, 237);
-    background-size: contain;
    padding-top: 3px;
    padding-bottom: 3px;
    width: 247px;
@@ -97,12 +99,22 @@ div#email > p{
     margin-top: -19px;
     color: rgb(243, 240, 240);
 }
-#ev{
+.ev{
     background-color: rgba(46, 237, 161, 0.439);
     width: 250px;
     height: 30px;
     border-radius: 10px;
+    margin-bottom: 5px;
 }
-#ev:hover{
+.ev:hover{
     background-color: rgba(28, 189, 127, 0.931);
+    
+}
+#mg{
+    position: relative;
+    left: -50%;
+    top: 50%;
+    transform: translate(220px , -30px);
+    font-size: 20px;
+    color: rgb(57, 53, 53);
 }
