--- a/estilos/midia-quireis.css
+++ b/estilos/midia-quireis.css
@@ -1,185 +1,44 @@
 @charset "UFT-8";
 
-@media screen and (min-width: 1205px) {
+@media screen and (min-width: 768px) and (max-width: 992px) {
+
     body{
-    background-color: rgba(12, 52, 4, 0.591);
+        background-image: linear-gradient(to top , rgba(239, 224, 224, 0.493) ,rgba(0, 0, 0, 0.575));
     }
-    section{
-       
-        border-radius: 15px;
-        height: 403px;
-        width: 760px;
-        background-color: rgb(255, 255, 255);
-        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-        text-align: center;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-80%, -50%)
-        }
+    section#login{
+        width:80vw;
 
-    #foto{
-
-            height: 404px;
-            width: 465px;
-            background-image: url(../imagens/pattern-gc49cc95ba_1280.jpg);
-            box-shadow: 2px 0px 5px  rgba(0, 0, 0, 0.581);
-            border-radius: 0px  10px  10px  0px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            margin-right: -50%;
-            transform: translate(365px, -50%)
-        }
-    div#email h1{
-
-        font-size:2.5em ;
-        }
-    div#email p{
-        font-size: 1.3em;
-        margin-bottom: 20px;
-        }
-     .paineo{
-        width: 500px;
-        margin-left: -10px;
-     }
-     .tp{
-        width: 545px;
-        margin-bottom: 10px;
-     }
-
-     #person{
-        display: inline-block;
-        position: relative;
-        top: 50%;
-        left: -50%;
-        transform: translate(269px, 40%);
-        font-size: 40px;
-        margin-top: -19px;
-        color: white;
-      } 
-      #chave{
-        display: inline-block;
-        position: relative;
-        top: 50%;
-        left: -50%;
-        transform: translate(268px, 40%);
-        font-size: 40px;
-        margin-top: -19px;
-        color: rgb(255, 253, 253);
-      }
-      .ev{
-        background-color: rgba(46, 237, 161, 0.439);
-        width: 500px;
-        height: 30px;
-        border-radius: 10px;
-        margin-bottom: 5px;      
-    }
-    #mg{
-        position: relative;
-        left: -50%;
-        top: 50%;
-        transform: translate(200px , 6px);
-        font-size: 20px;
-        color: rgb(57, 53, 53);
-    }
-    #bt{
-        margin-left: 25px;
     }
 
+    section#login > div#imagem{
+        float: left;
+        width: 30%;
+        height: 100%;
+    }
+
+    section#login > div#formulario{
+        float: right;
+        width: 70%;
+    }
+ 
+}  
+@media screen and (min-width:992px) {
+    body{
+        background-image: linear-gradient(to top , rgba(239, 224, 224, 0.493) ,rgba(0, 0, 0, 0.575));
+    }
+    section#login{
+        width: 950px;
+
+    }
+    section#login > div#imagem {
+        float: left;
+        width: 50%;
+        height: 100%;
+    }
+    section#login > div#formulario {
+        float: right;
+        width: 50%;
+    }
+    
 }
-
-@media screen and (min-width: 800px) and (max-width: 1200px) {
-    
-    body{
-        background-color: rgba(81, 40, 40, 0.883);
-    }
-    section{
-       
-    border-radius: 15px;
-    height: 353px;
-    width: 460px;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-10%, -50%)
-    }
-    #foto{
-        height: 355px;
-        width: 365px;
-        background-image: url(../imagens/pattern-gc49cc95ba_1280.jpg);
-        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.7);
-        border-radius: 10px  0px  0px  10px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-580px, -50%)
-    }
-  
-    #iemal{
-     width: 280px;
-     
-    }
-    div#email > p{
-        margin-bottom: 20px;
-        margin-left: 8px;
-    }
-    #isenha{
-        width: 280px;
-    }
-    .tp{
-        width: 340px;
-    }
-    #person{
-        display: inline-block;
-        position: relative;
-        top: 50%;
-        left: -50%;
-        transform: translate(169px, 40%);
-        font-size: 40px;
-        margin-top: -19px;
-        color: white;
-      }
-      #chave{
-        display: inline-block;
-        position: relative;
-        top: 50%;
-        left: -50%;
-        transform: translate(169px, 40%);
-        font-size: 40px;
-        margin-top: -19px;
-        color: rgb(255, 254, 254);
-      }
-    
-       
-    .ev{
-        background-color: rgba(46, 237, 161, 0.439);
-        width: 300px;
-        height: 30px;
-        border-radius: 10px;
-        margin-bottom: 5px;
-        
-      
-    }
-    #mg{
-        position: relative;
-        left: -50%;
-        top: 50%;
-        transform: translate(150px , 6px);
-        font-size: 20px;
-        color: rgb(57, 53, 53);
-    }
-    #bt{
-        margin-left: 20px;
-    }
-    }
-  
-    
-   
-    
-      
     
