--- a/estilos/midia-quireis.css
+++ b/estilos/midia-quireis.css
@@ -7,6 +7,7 @@
     }
     section#login{
         width:80vw;
+        height: 290px;
 
     }
 
@@ -20,6 +21,9 @@
         float: right;
         width: 70%;
     }
+   div#formulario> p {
+        padding: 10px 0px;
+    }
  
 }  
 @media screen and (min-width:992px) {
@@ -28,17 +32,26 @@
     }
     section#login{
         width: 950px;
+        height: 300px;
 
     }
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%;
     }
+    div#formulario> h1 {
+        font-size: 1.8em;
+    }
+    div#formulario > p {
+        padding: 10px 0px;
+    }
+
+
     
 }
     
