--- a/estilos/style.css
+++ b/estilos/style.css
@@ -21,8 +21,7 @@ main{
 section#login{
      position: absolute;
      top: 50%;
-     left: 50%;
-     transform: translate(-50%, -50%);
+     left: 50%;    
      overflow: hidden;
 
     background-color:white;
@@ -30,7 +29,8 @@ section#login{
     height:500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.514) ;
-
+    transform: translate(-50%, -50%);
+    transition: width 0.3s , height 0.3s;
 }
 section#login > div#imagem{
     display: block;
@@ -52,13 +52,35 @@ div#formulario > p {
 }
 form > div.campo{
     background-color: #5f2c82;
+    border: solid #5f2c82;
+    display: block;
     width: 100%;
-    height: 40px;
-    border-radius: 5px;
+    height: 39px;
+    border-radius: 9px;
     margin: 5px 0px;
+}
+div.campo > span{
+    color: white;
+    font-size: 2em;
+    width: 39px;
+    padding: 5px;
 }
 form > div.campo > label{
     display: none;
+}
+div.campo > input{
+    background-color:#94cfcd;
+    font-size: 1em;
+   
+    width: calc(100% - 44px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-15px);
+}
+div.campo > input:focus-within{
+    background-color: white;
 }
 form > input[type=submit]{
     display: block;
